examples/invalid/ns/memory/hello_task_glm_window_external_handle_probe_invalid.ns
mod cpu Main {
  struct WindowHandleTaskPacket {
    frame: Window<i64>,
    lane: i64,
    domain_code: i64
  }

  async fn consume(packet: WindowHandleTaskPacket) -> i64 {
    return packet.lane + packet.domain_code;
  }

  fn main() -> i64 {
    return 1;
  }
}
